force-app/main/default/objects/Mapping__c/Mapping__c.object-meta.xml
<CustomObject>
    <label>inwise Mapping</label>
    <nameField>
        <displayFormat>IMN-{0000}</displayFormat>
        <label>inwise Mapping No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>inwise Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>