force-app/main/default/objects/Mapping__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>inwise Account</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>inwise Mapping</relationshipLabel>
    <relationshipName>Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>