force-app/main/default/objects/Mapping__c/fields/inwise_Field__c.field-meta.xml
<CustomField>
    <fullName>inwise_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>inwise Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>