force-app/main/default/objects/Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>inwise_Field__c</columns>
    <columns>inwise_FieldId__c</columns>
    <columns>Object_Type__c</columns>
    <columns>Salesforce_Field__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>